# ImageFilterWebApp

./: app.py  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: index.html
